--- a/stlyle.css
+++ b/stlyle.css
@@ -1,5 +1,12 @@
 #grid {
+    margin-left: 25em;
+    width: 27em;
+    height: 27rem;
+    margin-top: 13px;
     
-    width: 400px;
-    height: 300px;
 }
+h3 {
+    margin-left:10rem;
+    font-size: 5rem;
+}
+
